--- a/app.json
+++ b/app.json
@@ -1,5 +1,5 @@
 {
-	"name": "NodeJSReactMyWorld",
+	"name": "myworld-node-react-mobx-minimal-boilerplate",
 	"description": "",
 	"repository": "",
 	"logo": "",
